--- a/sick-fits/backend/prisma.yml
+++ b/sick-fits/backend/prisma.yml
@@ -1,5 +1,5 @@
-#endpoint: ${env:PRISMA_ENDPOINT}
-endpoint: https://fits-keiichi-prod-2bdba1ee0f.herokuapp.com/keiichi-prod/prod
+endpoint: ${env:PRISMA_ENDPOINT}
+#endpoint: https://fits-keiichi-prod-2bdba1ee0f.herokuapp.com/keiichi-prod/prod
 datamodel: datamodel.prisma
 #secret: ${env:PRISMA_SECRET}
 hooks:
